fix overflow behavior

--- a/notq/static/style.css
+++ b/notq/static/style.css
@@ -21,7 +21,7 @@ nav ul li a, nav ul li span { padding: 3px; color: white; }
 .flash { margin: 1em 0; padding: 1em; background: #cae6f6; border: 1px solid #377ba8; font-size: medium; }
 .post > header { display: flex; align-items: flex-end; font-size: 0.85em; }
 .post > header > .votes { margin-right: 18px; margin-top: 4px; align-self: center; text-align: center; }
-.post > p { overflow: scroll; }
+.post > p { overflow: hidden; }
 .vote { color: lightgray; cursor: pointer; }
 .edit { align-self: center; }
 .post > header > .middle { flex: auto; }
